<resources>
    <string name="app_name">COVID19</string>
    <string name="medical">Medical</string>
    <string name="statistics">Statistics</string>
    <string name="covid_19_world_statistics">Covid-19 world statistics</string>
    <string name="worldwide">Worldwide</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="_00000">00000</string>
    <string name="_0000">0000</string>
    <string name="preventive_healthcare">Preventive healthcare</string>
    <string name="symptoms">Symptoms</string>
    <string name="news">News</string>
    <string name="suggestion">Suggestion</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="CName">Country Name</string>
    <string name="new_cases">New Cases</string>
    <string name="_23">23</string>
    <string name="usa">USA</string>
    <string name="share_result">Share Result</string>
    <string name="total">Total</string>
    <string name="new_death">New Death</string>
    <string name="_35">35</string>
    <string name="critical">Critical</string>
    <string name="_4567">4567</string>
    <string name="active">Active</string>
    <string name="_32345">32345</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="calculate">Calculate</string>
    <string name="t">Total :</string>
    <string name="reset">Reset</string>
    <string name="age">Age</string>
    <string name="yers">Yers</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="height">Height</string>
    <string name="cm">Cm</string>
    <string name="yemen">Yemen</string>
    <string name="bmi_result">BMI Result</string>
    <string name="covid19">COVID19</string>
    <string name="get_the_latest_update_of_the_covid19">Get the latest update of the COVID19 .</string>
    <string name="feedback">Feedback</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="type_here">Type Here</string>
</resources>
