<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Feedback">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView
            android:id="@+id/feedback_scrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="14.0dip"
            android:paddingLeft="14.0dip"
            android:paddingRight="14.0dip"
            android:scrollbars="none" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:background="@color/gray"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dip"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/feedback" />
                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="15dip"
                    android:textSize="13dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/black"
                    android:hint="@string/email_address_optional" />
                <EditText
                    android:id="@+id/feedback_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:textSize="13dp"
                    android:lines="4"
                    android:textColorHint="@color/white"
                    android:autoLink="web|email"
                    android:gravity="top"
                    android:hint="@string/type_here"/>
                <Button
                    android:id="@+id/feedback_publish"
                    android:layout_width="fill_parent"
                    android:layout_height="45dip"
                    android:layout_marginTop="15dip"
                    android:layout_marginBottom="30dip"
                    android:background="@drawable/bt_uisquare"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:text="Feedback"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>